force-app/main/default/objects/CampaignMember/fields/Attend__c.field-meta.xml
<CustomField>
    <fullName>Attend__c</fullName>
    <label># Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>