force-app/main/default/objects/CampaignMember/fields/Contibution__c.field-meta.xml
<CustomField>
    <fullName>Contibution__c</fullName>
    <label>Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>