force-app/main/default/objects/CampaignMember/fields/Is_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_User__c</fullName>
    <formula>IF(ISPICKVAL(Contact.Customer_Portal_User__c , &quot;Yes&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Portal User</label>
    <type>Text</type>
</CustomField>