force-app/main/default/objects/CampaignMember/fields/Type_of_participant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_participant__c</fullName>
    <label>Type of participant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International Faculty</fullName>
            </value>
            <value>
                <fullName>National Faculty</fullName>
            </value>
            <value>
                <fullName>Seminar Participant</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Not selected</fullName>
            </value>
            <value>
                <fullName>Participation Cancelled</fullName>
            </value>
            <value>
                <fullName>Seminar Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>