force-app/main/default/objects/CampaignMember/recordTypes/OMI_Seminar.recordType-meta.xml
<RecordType>
    <fullName>OMI_Seminar</fullName>
    <active>true</active>
    <label>OMI Seminar</label>
</RecordType>