force-app/main/default/objects/CampaignMember/validationRules/Must_enter_Number_Attending.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_enter_Number_Attending</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status ,&quot;YES&quot;)  &amp;&amp;  IsBlank(Attend__c)</errorConditionFormula>
    <errorDisplayField>Attend__c</errorDisplayField>
    <errorMessage>You must enter the number attending</errorMessage>
</ValidationRule>